--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,18 +17,18 @@ security:
         main:
             anonymous: true
 
-            provider: in_database
+            #provider: in_database
 
-            form_login:
-                login_path: security_login
-                check_path: security_login
+            #form_login:
+                #login_path: security_login
+                #check_path: security_login
             logout:
                 path: security_logout
                 target: blog
 
-            #guard:
-                #authenticators:
-                #    - App\Security\LoginFormAuthenticator
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
